<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/nav_browse"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_browse" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/menu_profile" />

</menu>

